--- a/public/css/style.css
+++ b/public/css/style.css
@@ -105,10 +105,16 @@ a {
 	padding: 30px;
 	max-height: 500px;
 	overflow-y: scroll;
+	
 }
 .join-container{
 	border-radius: 1rem;
-	box-shadow: 1rem 1rem .3rem 1rem rgb(153, 89, 89);
+	box-shadow: 2px 2px 50px 2px gray;
+	transition: all 0.4s ease-in-out;
+}
+
+.join-container:hover{
+	box-shadow: 2px 2px 50px 2px rgb(23, 23, 23);
 }
 .chat-messages .message {
 	padding: 10px;
@@ -137,13 +143,16 @@ a {
 
 .chat-form-container form {
 	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
 
 .chat-form-container input[type='text'] {
 	font-size: 16px;
 	padding: 5px;
 	height: 40px;
-	flex: 1;
+	border-radius: .8rem;
+
 }
 
 /* Join Page */
@@ -172,6 +181,9 @@ a {
 
 .join-main .form-control {
 	margin-bottom: 20px;
+}
+#msg{
+	width: 70%;
 }
 
 .join-main label {
@@ -207,6 +219,34 @@ a {
 .join-main .btn {
 	margin-top: 20px;
 	width: 100%;
+}
+.btn{
+	padding: .6rem 1.4rem;
+	border-radius: .8rem;
+	transition: all 0.4s ease-in;
+}
+.btn:hover{
+	scale: 0.9;
+	color: #051549;
+}
+
+#password{
+	font-size: 12px;
+	padding: 5px;
+	height: 40px;
+	width: 90%;
+	border-radius: .7rem;
+	outline: none;
+	transition: all 0.7s ease-in-out;
+
+}
+
+.form-control{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 1rem;
 }
 
 @media (max-width: 700px) {
